{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 271,
  "lineage": "d2e793eb-3b67-afe0-d8e8-d0282abaa799",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "project3_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a460177a631c689",
            "association_id": "eipassoc-03c5dd0ae9b8c2d18",
            "domain": "vpc",
            "id": "eipalloc-07a460177a631c689",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0d406705b335b0217",
            "private_dns": "ip-10-1-1-13.us-east-2.compute.internal",
            "private_ip": "10.1.1.13",
            "public_dns": "ec2-18-224-13-163.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.13.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IS531 NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "IS531 NAT Gateway EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.project3_igw",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project3_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897503354578:internet-gateway/igw-0366a7cc991074373",
            "id": "igw-0366a7cc991074373",
            "owner_id": "897503354578",
            "tags": {
              "Name": "IS531 Main IGW"
            },
            "tags_all": {
              "Name": "IS531 Main IGW"
            },
            "vpc_id": "vpc-0e5daba1171de886c"
          },
          "dependencies": [
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project3_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a460177a631c689",
            "connectivity_type": "public",
            "id": "nat-0d2d883efcdfe593c",
            "network_interface_id": "eni-0d406705b335b0217",
            "private_ip": "10.1.1.13",
            "public_ip": "18.224.13.163",
            "subnet_id": "subnet-04c9e5db2b7dbc21b",
            "tags": {
              "Name": "IS531 Main NAT Gateway"
            },
            "tags_all": {
              "Name": "IS531 Main NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.project3_nat_eip",
            "aws_internet_gateway.project3_igw",
            "aws_subnet.public",
            "aws_vpc.project3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897503354578:route-table/rtb-0c4e2d21f9aa57864",
            "id": "rtb-0c4e2d21f9aa57864",
            "owner_id": "897503354578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d2d883efcdfe593c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IS531 Private Route Table"
            },
            "tags_all": {
              "Name": "IS531 Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5daba1171de886c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.project3_nat_eip",
            "aws_internet_gateway.project3_igw",
            "aws_nat_gateway.project3_nat",
            "aws_subnet.public",
            "aws_vpc.project3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897503354578:route-table/rtb-074805cc83bca4c1a",
            "id": "rtb-074805cc83bca4c1a",
            "owner_id": "897503354578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0366a7cc991074373",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IS531 Public Route Table"
            },
            "tags_all": {
              "Name": "IS531 Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5daba1171de886c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project3_igw",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c4a13ed74627c71",
            "route_table_id": "rtb-074805cc83bca4c1a",
            "subnet_id": "subnet-00b40794d78155645"
          },
          "dependencies": [
            "aws_internet_gateway.project3_igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.project3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0858801931c7d593d",
            "route_table_id": "rtb-0c4e2d21f9aa57864",
            "subnet_id": "subnet-0786435bc33bd07f9"
          },
          "dependencies": [
            "aws_eip.project3_nat_eip",
            "aws_internet_gateway.project3_igw",
            "aws_nat_gateway.project3_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.project3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6ecc0471b475243",
            "route_table_id": "rtb-074805cc83bca4c1a",
            "subnet_id": "subnet-04c9e5db2b7dbc21b"
          },
          "dependencies": [
            "aws_internet_gateway.project3_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.project3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897503354578:security-group/sg-023728ff8b437c479",
            "description": "DB security group for RDS and SSH traffic over ports 3306 and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023728ff8b437c479",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "is531_db_security_group",
            "name_prefix": "",
            "owner_id": "897503354578",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "IS531 DB Security Group",
              "security_group": "rds_sg"
            },
            "tags_all": {
              "Name": "IS531 DB Security Group",
              "security_group": "rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5daba1171de886c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897503354578:subnet/subnet-0786435bc33bd07f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0786435bc33bd07f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897503354578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IS531 Private Subnet 2"
            },
            "tags_all": {
              "Name": "IS531 Private Subnet 2"
            },
            "vpc_id": "vpc-0e5daba1171de886c"
          },
          "dependencies": [
            "aws_vpc.project3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897503354578:subnet/subnet-04c9e5db2b7dbc21b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c9e5db2b7dbc21b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897503354578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IS531 Public Subnet"
            },
            "tags_all": {
              "Name": "IS531 Public Subnet"
            },
            "vpc_id": "vpc-0e5daba1171de886c"
          },
          "dependencies": [
            "aws_vpc.project3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897503354578:subnet/subnet-00b40794d78155645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b40794d78155645",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897503354578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IS531 Public2 Subnet"
            },
            "tags_all": {
              "Name": "IS531 Public2 Subnet"
            },
            "vpc_id": "vpc-0e5daba1171de886c"
          },
          "dependencies": [
            "aws_vpc.project3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project3_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897503354578:vpc/vpc-0e5daba1171de886c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0622ff6e05e73a49f",
            "default_route_table_id": "rtb-04cb03c2d71957b46",
            "default_security_group_id": "sg-0d4da7fb6ffea72c3",
            "dhcp_options_id": "dopt-c8206fa3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5daba1171de886c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cb03c2d71957b46",
            "owner_id": "897503354578",
            "tags": {
              "Name": "IS531 Project 3 VPC"
            },
            "tags_all": {
              "Name": "IS531 Project 3 VPC"
            }
          }
        }
      ]
    }
  ]
}